libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-struct-type.jsonc
//@ run: fail
//@ description: struct that are annotated with a type should fail
[
  "::kernel::special_form::use",
  "::math",
  {
    "#struct": { "x": "x" },
    "#type": "X"
    //~^ ERROR Remove this type annotation
  },
  "x"
]
